--- a/css-compiled/template.css
+++ b/css-compiled/template.css
@@ -878,6 +878,15 @@ ul.pagination {
   .callout img {
     border-radius: 3px; }
 
+.header {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%; }
+  .header h3 {
+    display: inline-block; }
+
 .modular .modular-row:last-child {
   margin-bottom: 2rem; }
 
