--- a/scss/template/modular/_first_panel.scss
+++ b/scss/template/modular/_first_panel.scss
@@ -9,5 +9,48 @@
 	h3
 	{
 		display: inline-block;
+
+		&:first-of-type
+		{
+			margin-left: 2rem;
+			margin-right: 1.5rem;
+		}
+	}
+
+	.modular-row
+	{
+		position: absolute;
+		top: 50px;
+		background: transparent;
+		left: 50%;
+	}
+
+	.section-content
+	{
+		position: relative;
+		left: -50%;
+		width: 700px;
+	}
+
+	.header-boxes
+	{
+		flex-grow: 1;
+		flex-shrink: 1;
+		height: 100vh;
+		width: 100%;
+		display: flex;
+		flex-flow: row nowrap;
+	}
+
+	.header-box:first-of-type
+	{
+		background-color: red;
+		flex-grow: 1;
+	}
+
+	.header-box:last-of-type
+	{
+		background-color: black;
+		flex-grow: 1;
 	}
 }
