--- a/templates/modular/first_panel.html.twig
+++ b/templates/modular/first_panel.html.twig
@@ -1,7 +1,13 @@
+<div class="header-boxes">
+	<div class="header-box first-box"></div>
+	<div class="header-box second-box"></div>
+</div>
 <div class="modular-row callout">
-    {% set image = page.media.images|first %}
-    {% if image %}
-        {{ image.cropResize(400,400).html('','','align-'~page.header.image_align) }}
-    {% endif %}
-{{ content }}
+	<div class="section-content">
+	    {% set image = page.media.images|first %}
+	    {% if image %}
+	        {{ image.cropResize(400,400).html('','','align-'~page.header.image_align) }}
+	    {% endif %}
+		{{ content }}
+	</div>
 </div>
