--- a/css-compiled/nucleus.css
+++ b/css-compiled/nucleus.css
@@ -1,3 +1,6 @@
+.modular.header-image #header #navbar a {
+  color: #000000 !important; }
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
