--- a/scss/configuration/nucleus/_nav.scss
+++ b/scss/configuration/nucleus/_nav.scss
@@ -1,3 +1,8 @@
 // Dropdowns
 $dropdown-width:				140px !default;
 $flyout-width:					140px !default;
+
+.modular.header-image #header #navbar a
+{
+	color: $black !important;
+}
