--- a/scss/configuration/template/_colors.scss
+++ b/scss/configuration/template/_colors.scss
@@ -36,7 +36,7 @@ $showcase-text:					#fff;
 $feature-bg:					#fff;
 
 // Main Body
-$main-bg:						#f7f7f7;
+$main-bg:						#ffffff;
 $body-border:					darken($main-bg, 5%);
 
 // Sidebar
@@ -54,7 +54,7 @@ $rule-color: 					#F0F2F4;
 $code-text:						#c7254e;
 $code-bg:						#f9f2f4;
 $pre-text:						#237794;
-$pre-bg:						#f6f6f6;
+$pre-bg:						#ffffff;
 
 // Dark Contrast variation
 $dark-navbar-text:				#999;
