--- a/scss/template/modular/_all.scss
+++ b/scss/template/modular/_all.scss
@@ -3,6 +3,7 @@
 @import "text";
 @import "first_panel";
 @import "second_panel";
+@import "third_panel";
 
 .modular {
     .modular-row:last-child {
