--- a/css-compiled/nucleus.css
+++ b/css-compiled/nucleus.css
@@ -525,7 +525,7 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 3.2rem; }
+  font-size: 30pt; }
 
 h2 {
   font-size: 2.5rem; }
@@ -534,7 +534,7 @@ h3 {
   font-size: 2.1rem; }
 
 h4 {
-  font-size: 1.75rem; }
+  font-size: 1rem; }
 
 h5 {
   font-size: 1.35rem; }
