--- a/scss/template/_typography.scss
+++ b/scss/template/_typography.scss
@@ -6,7 +6,7 @@ html, body, button, input, select, textarea, .pure-g, .pure-g [class *= "pure-u"
 
 // Headings
 h1, h2, h3, h4, h5, h6 {
-	font-family: $font-family-header;
+	font-family: $font-family-default;
 	font-weight: 400;
 	text-rendering: optimizeLegibility;
 	letter-spacing: -0px;
@@ -14,6 +14,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	font-size: $h1-font-size;
+	font-family: $font-family-default;
+	font-weight: 700;
     @include breakpoint(mobile-only) {
         font-size: 2.5rem;
         line-height: 1.2;
@@ -22,6 +24,7 @@ h1 {
 }
 
 h2 {
+	font-family: $font-family-header;
 	@include breakpoint(tablet-range) {
 		font-size: $h2-font-size - .40;
 	}
@@ -40,6 +43,7 @@ h3 {
 }
 
 h4 {
+	font-weight: 700;
 	@include breakpoint(tablet-range) {
 		font-size: $h4-font-size - .40;
 	}
@@ -72,7 +76,7 @@ h1 + h2 {
 	}
 	line-height: 1;
 	text-align: center;
-	font-family: $font-family-default;
+	font-family: $font-family-header;
 	font-weight: 300;
 }
 
