--- a/scss/template/modular/_all.scss
+++ b/scss/template/modular/_all.scss
@@ -4,6 +4,7 @@
 @import "first_panel";
 @import "second_panel";
 @import "third_panel";
+@import "fourth_panel";
 
 .modular {
     .modular-row:last-child {
