--- a/scss/template/modular/_all.scss
+++ b/scss/template/modular/_all.scss
@@ -5,6 +5,8 @@
 @import "second_panel";
 @import "third_panel";
 @import "fourth_panel";
+@import "fifth_panel";
+@import "sixth_panel";
 
 .modular {
     .modular-row:last-child {
