--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -1,30 +1,3 @@
-.grav-lightslider
-{
-	position: relative;
-	top: -100px;
-
-	*
-	{
-		color: $gray !important;
-		font-family: $font-family-default !important;
-	}
-
-	li.active a
-	{
-		background-color: $orange !important;
-	}
-
-	li a:hover
-	{
-		background-color: $orange !important;
-	}
-
-	h1 strong
-	{
-		color: $orange !important;
-	}
-}
-
 .services
 {
 	color: $white !important;
@@ -43,6 +16,23 @@
 	{
 		padding: 0;
 		padding-top: 6rem;
+		padding-right: 6rem;
+	}
+
+	h2:first-of-type
+	{
+		text-align: right;
+		padding: 2rem 0;
+	}
+
+	ul
+	{
+		padding-bottom: 6rem;
+	}
+
+	h2, ul
+	{
+		padding-left: 6rem;
 	}
 }
 
@@ -94,7 +84,11 @@
 	background-color: $white;
 	width: 100vw;
 	color: $gray;
-	text-align: center;
+
+	h4
+	{
+		text-align: center !important;
+	}
 }
 
 .services-callout-panel
@@ -108,6 +102,7 @@
 		padding: 6rem;
 		padding-bottom: 3rem;
 		margin: 0 !important;
+		text-align: center !important;
 	}
 
 	&.active
@@ -123,3 +118,31 @@
 		display: none;
 	}	
 }
+
+.grav-lightslider
+{
+	position: relative;
+	top: -100px;
+
+	*
+	{
+		color: $gray !important;
+		font-family: $font-family-default !important;
+	}
+
+	li.active a
+	{
+		background-color: $orange !important;
+	}
+
+	li a:hover
+	{
+		background-color: $orange !important;
+	}
+
+	h1 strong
+	{
+		color: $orange !important;
+	}
+}
+
