--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -10,19 +10,19 @@
 	h1
 	{
 		text-align: right;
+		padding-right: 6rem;
 	}
 
 	.callout
 	{
 		padding: 0;
 		padding-top: 6rem;
-		padding-right: 6rem;
 	}
 
 	h2:first-of-type
 	{
 		text-align: right;
-		padding: 2rem 0;
+		padding: 2rem 6rem;
 	}
 
 	ul
