--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -34,6 +34,7 @@
         {% do assets.addJs('theme://js/modernizr.custom.71422.js',100) %}
         {% do assets.addJs('theme://js/antimatter.js') %}
         {% do assets.addJs('theme://js/slidebars.min.js') %}
+        {% do assets.addJs('theme://js/tgr_main.js') %}
     {% endblock %}
     {{ assets.js() }}
 
