--- a/scss/template/_typography.scss
+++ b/scss/template/_typography.scss
@@ -15,7 +15,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
 	font-size: $h1-font-size;
 	font-family: $font-family-default;
-	font-weight: 700;
+	font-weight: $font-weight-bold;
     @include breakpoint(mobile-only) {
         font-size: 2.5rem;
         line-height: 1.2;
