--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -30,8 +30,10 @@
     {% if show_onpage_menu %}
         <ul class="navigation">
         {% for module in page.collection() %}
-            {% set current_module = (module.active or module.activeChild) ? 'active' : '' %}
-            <li class="{{ current_module }}"><a href="#{{ _self.pageLinkName(module.menu) }}">{{ module.menu }}</a></li>
+            {% if module.menu == 'Services' or module.menu == 'Clients' or module.menu == 'About' or module.menu == 'Contact' %}
+                {% set current_module = (module.active or module.activeChild) ? 'active' : '' %}
+                <li class="{{ current_module }}"><a href="#{{ _self.pageLinkName(module.menu) }}">{{ module.menu }}</a></li>
+            {% endif %}
         {% endfor %}
         {% for mitem in site.menu %}
             <li>
