--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -1,17 +1,19 @@
 {% macro loop(page) %}
     {% for p in page.children.visible %}
-        {% set current_page = (p.active or p.activeChild) ? 'active' : '' %}
-        <li class="{{ current_page }}">
-            <a href="{{ p.url }}">
-                {% if p.header.icon %}<i class="fa fa-{{ p.header.icon }}"></i>{% endif %}
-                {{ p.menu }}
-            </a>
-            {% if p.children.visible.count > 0 %}
-                <ul>
-                    {{ _self.loop(p) }}
-                </ul>
-            {% endif %}
-        </li>
+{#         {% if p.menu == 'Services' %} #}
+            {% set current_page = (p.active or p.activeChild) ? 'active' : '' %}
+            <li class="{{ current_page }}">
+                <a href="{{ p.url }}">
+                    {% if p.header.icon %}<i class="fa fa-{{ p.header.icon }}"></i>{% endif %}
+                    {{ p.menu }}
+                </a>
+                {% if p.children.visible.count > 0 %}
+                    <ul>
+                        {{ _self.loop(p) }}
+                    </ul>
+                {% endif %}
+            </li>
+        {# {% endif %} #}
     {% endfor %}
 {% endmacro %}
 
@@ -20,13 +22,15 @@
         {{ _self.loop(pages) }}
     {% else %}
         {% for page in pages.children.visible %}
-            {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
-            <li class="{{ current_page }}">
-                <a href="{{ page.url }}">
-                    {% if page.header.icon %}<i class="fa fa-{{ page.header.icon }}"></i>{% endif %}
-                    {{ page.menu }}
-                </a>
-            </li>
+            {# {% if page.menu == 'Services' %} #}
+                {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
+                <li class="{{ current_page }}">
+                    <a href="{{ page.url }}">
+                        {% if page.header.icon %}<i class="fa fa-{{ page.header.icon }}"></i>{% endif %}
+                        {{ page.menu }}
+                    </a>
+                </li>
+            {# {% endif %} #}
         {% endfor %}
     {% endif %}
     {% for mitem in site.menu %}
