--- a/scss/configuration/template/_colors.scss
+++ b/scss/configuration/template/_colors.scss
@@ -1,5 +1,5 @@
 // Core
-$core-accent:					#1BB3E9;
+$core-accent:					$orange;
 $secondary-link:				#F6635E;
 $white:							#fff;
 $black:							#000000;
