--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -102,6 +102,7 @@
 		transform: rotate(50deg);
 		top: 920px;
 		right: 90px;
+		opacity: 0.5;
 	}
 }
 
@@ -162,11 +163,13 @@
 .lSAction > .lSNext
 {
 	background-position: -35px 0 !important;
+	right: 10% !important;
 }
 
 .lSAction > .lSPrev
 {
 	background-position: 0px 2px !important;
+	left: 10% !important;
 }
 
 .lSAction > a
